--- a/learn.css
+++ b/learn.css
@@ -2,15 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: centaur;
+    font-size: 20px;
   }
   body {
     background-color: #f1f1f1;
+    margin: 0px;
+    padding: 0px;
   }
   header {
     background-color: #333;
     text-align: center;
     padding: 30px;
+    padding-bottom: 50px;
+    margin: 0px;
     color: white;
   }
   article {
@@ -26,16 +31,19 @@
   }
   nav {
     background-color: gray;
-    padding: 10px;
+    padding-top: 0px;
+    margin-bottom: 10px;
   }
   nav ul {
     list-style-type: none;
     overflow: hidden;
+    padding: 0px;
+    margin: 0px;
   }
   nav li {
     display: inline;
-    margin: 5px;
-    padding: 5px;
+    padding: 0px;
+    margin: 0px;
     float: left;
   }
   nav li a {
@@ -43,7 +51,8 @@
     text-decoration: none;
     display: block;
     text-align: center;
-    padding: 10px;
+    padding: 16px;
+    margin: 0px;
     transition: all 0.3s ease;
   }
   nav li a:hover {
@@ -69,7 +78,6 @@
     cursor: pointer;
   }
 
-
 form {
     background-color: #f1f1f1;
     padding: 20px;
@@ -78,6 +86,10 @@ form {
     max-width: 400px;
     margin: 0 auto;
     text-align: center;
+}
+
+form h1 {
+    margin-bottom: 20px;
 }
 
 form button {
