--- a/style.css
+++ b/style.css
@@ -1,127 +1,38 @@
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
-    color: white;
-    background-color: rgb(20, 20, 20);
+    font-family: calibri;
+    background-color: rgba(0, 0, 0, 0.87);
+    
 }
-
-.body img {   
-    width: 125px;
-    height: 175px;
-    margin: 0;
-    padding: 0;
-    display:flexbox;
-    transition: transform 0.3s;
+body h1 {
+    color: aliceblue;
 }
-
-.body img:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
-header {
-    background-image: url(img/screengrabs-and-wallpapers-v0-vr3l8e7d1wsd1.png);
-    background-size: cover;
-    background-position: center top;
-    background-repeat: no-repeat;
-    padding: 2rem 0;
-    position: relative;
-}
-
-header::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-header nav {
-    position: relative;
-    z-index: 2; /* Ensure text is above overlay */
-}
-
-header h1 {
-    position: relative;
-    z-index: 2; /* Ensure text is above overlay */
-    margin: 0;
-    padding: 0 2rem;
-    font-size: 1.8rem;
-}
-
-header nav {
-     background-color: rgb(37, 37, 37);
-     z-index: 2;
-}
-
-.container {
+header img {
     display: flex;
-    gap: 2rem;
-    padding: 2rem;
-    flex: 1;
+    width: 100%;
+    height: 300px;
 }
-
-.menu {
-    flex: 0 0 250px;
-    background-color: rgba(255, 255, 255, 0.068);
-    border-radius: 8px;
-    padding: 1.5rem;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    height: fit-content;
+header::before {
 }
-
-.menu ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    color: white;
-}
-
-.menu ul li {
-    margin: 0.5rem 0;
-    display: block;
-    padding: 10px;
-    transition: all 0.3s ease;
-}
-
-.menu ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.menu ul li:hover {
-    background-color: #333;
-    color: white;
-    transition: 0.5s;
-    text-decoration: none;
-    transform: scale(1.1);
-    cursor: pointer;
-}
-
 nav {
-    background-color: gray;
-    padding: 0px;
-  }
-  nav ul {
-    list-style-type: none;
-    overflow: hidden;
-  }
-  nav li {
-    display: inline;
-    margin: 0%;
-    padding: 0;
-    float: left;
-  }
-  nav li a {
-    color: white;
+    background-color: rgba(0, 0, 0, 0.800);
+    padding: 20px;
+    margin: auto;
+}
+nav ul a {
+    color: rgb(255, 255, 255);
+    display: flexbox;
     text-decoration: none;
-    display: block;
-    text-align: center;
-    padding: 16px;
-  }
-  nav li a:hover {
-    background-color: #333;
-    transition: 0.5s;
-  }
+    margin: 10px;
+}
+.tv {
+    display: flex;
+}
+.tv img {
+    width: 100px;
+    height: 150px;
+}
+.movie img {
+    width: 100px;
+    height: 150px;
+}
