--- a/style.css
+++ b/style.css
@@ -2,35 +2,57 @@ body {
     margin: 0;
     font-family: calibri;
     background-color: rgba(0, 0, 0, 0.87);
-    
 }
 body h1 {
     color: aliceblue;
+    text-align: center;
 }
-header img {
-    display: flex;
-    width: 100%;
-    height: 300px;
+header {
+    position: relative;
+    padding-top: 40px;
+    background-image: url(img/screengrabs-and-wallpapers-v0-vr3l8e7d1wsd1.png);
+    background-size: cover;
 }
 header::before {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.800);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: ;
+}
+header h1 {
+    position: relative;
+    z-index: 1;
 }
 nav {
     background-color: rgba(0, 0, 0, 0.800);
     padding: 20px;
     margin: auto;
+    position: relative;
+}
+nav ul {
+    display: flex;
+    justify-content: space-evenly;
 }
 nav ul a {
     color: rgb(255, 255, 255);
-    display: flexbox;
     text-decoration: none;
     margin: 10px;
 }
 .tv {
     display: flex;
+    justify-content: space-evenly;
 }
 .tv img {
     width: 100px;
     height: 150px;
+}
+.movie {
+    display: flex;
+    justify-content: space-evenly;
 }
 .movie img {
     width: 100px;
